# RojakAI

./: README.md  docker-compose.yml  pyproject.toml
app/: cli.py
app/config/: env_loader.py  settings.py
app/core/: agent.py  context_builder.py  memory_manager.py  reflector.py
app/llm/: ollama_client.py  prompt_builder.py
app/mcp/: file_tool.py  git_tool.py  lint_tool.py  search_tool.py  terminal_tool.py
app/rag/: chunker.py  indexer.py  retriever.py  vector_store.py
app/storage/: minio_client.py  postgres_repository.py  redis_cache.py
app/temporal/activities/: embedding_activity.py
app/temporal/workflows/: indexing_workflow.py
app/ui/: terminal_ui.py
